Added branding info

--- a/org.eclipselabs.plugindependencies.ui/build.properties
+++ b/org.eclipselabs.plugindependencies.ui/build.properties
@@ -4,4 +4,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               about.ini,\
+               about.properties,\
+               epl-v10.html,\
+               loskutov32.png
